Tweak link styles.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ class: home
   <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
     <div>
       <h3>GOOD Fest</h3>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span>, sponsored by Google</p>
     </div>
   </a>
 
