Tweak link style

--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -101,6 +101,6 @@ title: Fahrenheit Studio
     </div>
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span>, sponsored by Google</p>
     </div>
   </a>
