--- a/good-community.html
+++ b/good-community.html
@@ -31,7 +31,7 @@ title: GOOD Community
 
     <h2>Visit the project</h2>
     <ul class="action">
-      <li><a href="http://web.archive.org/web/20150909154620/http://community.good.is/popular/do">GOOD Community (on archive.org)</a></li>
+      <li><a href="http://web.archive.org/web/20150909154620/http://community.good.is/popular/do">GOOD Community, <small>on archive.org</small></a></li>
       <li><a href="https://goodinc.github.io/citizen-ui/html/prototype/">Web prototypes</a></li>
       <li><a href="https://goodinc.github.io/citizen-ui/html/patterns/">Pattern library</a></li>
     </ul>
