--- a/good-fest.html
+++ b/good-fest.html
@@ -13,7 +13,7 @@ title: GOOD Fest
   <div class="banner" style="background-image: url(/images/projects/goodfest-responsive.jpg); background-position: 25% 50%;">
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the teams <a href="http://www.goodinc.com">GOOD Worldwide</a>, sponsored by Google</p>
+      <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, sponsored by Google</p>
     </div>
   </div>
 
