--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -30,7 +30,7 @@ title: OK the Store
       <!--
       <li><a href="http://okthestore.com">OK the Store</a></li>
       -->
-      <li><a href="https://web-beta.archive.org/web/20140802135613/okthestore.com">OK the Store (on archive.org)</a></li>
+      <li><a href="https://web-beta.archive.org/web/20140802135613/okthestore.com">OK the Store, <small>on archive.org</small></a></li>
       <li><a href="http://okthestore.jimthoburn.com">Web Prototypes</a></li>
     </ul>
 
