--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -22,28 +22,17 @@ title: CTZN App
 
     <p>CTZN is a social app that encourages volunteers to share stories with each other. We built it to help non-profit organizations grow and get the support they need, by becoming more visible to the public.</p>
 
-    <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://ctznapp.com/web">web app</a>, a <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
+    <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://ctznapp.com/web">web application</a>, a <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
 
-    <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, creating HTML emails, designing responsive layouts for the stories pages, writing production-quality HTML, CSS and JavaScript for the promotional website, the <a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">channels</a> and the <a href="https://ctznapp.com/web">web application</a>, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with client-side and server-side templates. (We used <a href="http://knockoutjs.com">Knockout</a> and Sinatra.)</p>
+    <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, creating HTML emails, designing responsive layouts for the stories pages, writing production-quality HTML, CSS and JavaScript for the promotional website, the <a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">channels</a> and the web application, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with client-side and server-side templates. (We used <a href="http://knockoutjs.com">Knockout</a> and Sinatra.)</p>
 
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="http://getctzn.com">Promotional Website</a></li>
-      <li><a href="https://ctznapp.com/web">Web Application</a></li>
+      <li><a href="http://getctzn.com">CTZN</a></li>
+      <li><a href="https://ctznapp.com/web">Web application</a></li>
       <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
-    </ul>
-
-    <h2>Stories</h2>
-    <ul class="action">
-      <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Milk &amp; Bookies</a></li>
-      <li><a href="https://www.ctznapp.com/push/C50609F6/kaboom">KaBOOM!</a></li>
-    </ul>
-
-    <h2>Channels</h2>
-    <ul class="action">
-      <li><a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">Dare to Imagine</a></li>
-      <li><a href="https://www.ctznapp.com/push/86B01D86/perthes-kids-foundation?channel=1">Perthes Kids Foundation</a></li>
+      <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
     </ul>
 
     <figure>
