--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ class: home
   </a>
   -->
 
-  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community-wide-cropped.png); background-position: -500px 50%;">
+  <a href="/good-community" class="banner" style="background-image: url(/images/good-community/Screen%20Shot%202017-08-26%20at%206.10.21%20PM.png); background-size: calc(100% + 200px) auto; background-position: -75px -150px">
     <div>
       <h3>GOOD Community</h3>
       <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
