Revert button style

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -30,7 +30,7 @@ title: CTZN App
 
     <ul class="action">
       <li><a href="http://getctzn.com">CTZN</a></li>
-      <li><a href="https://ctznapp.com/web">Web application</a></li>
+      <li><a href="https://ctznapp.com">Web application</a></li>
       <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
       <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
     </ul>
