Simplify home page.

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -156,7 +156,7 @@ title: Food Oasis Los Angeles
 
   </div>
 
-  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
+  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
     <div>
       <h2>Next project →</h2>
     </div>
