--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ class: home
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
     -->
-    <h1 style="font-size: inherit; line-height: inherit; margin: 1.4em 0;">Ahoy there! <span style="display: inline-block">I’m Jim, a <!-- web design engineer -->user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! <span style="display: inline-block">I’m Jim, a <!-- web design engineer -->user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
-    <h2 style="font-size: 2em; line-height: 1; margin-top: 1em; margin-bottom: 1em;">I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
+    <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
     <p>If you’re making a web site or application, <a href="#services">I can assist</a> with prototypes, universal design, iterative development, pattern libraries, and more. Here are some example projects…</p>
 
@@ -56,42 +56,42 @@ class: home
   <a href="/good-fest" class="banner" style="background-image: url(/images/projects/goodfest-shows.png);">
     <div>
       <h3>GOOD Fest</h3>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span>, sponsored by Google</p>
+      <p>Google</p>
     </div>
   </a>
 
   <a href="/grand-park" class="banner" style="background-image: url(/images/projects/july4.png)">
     <div>
       <h3>4th of July at <span style="display: inline-block">Grand Park</span></h3>
-      <p>with the team at <span style="display: inline-block">The Music Center</span></p>
+      <p><span style="display: inline-block">The Music Center</span></p>
     </div>
   </a>
 
   <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png);">
     <div>
       <h3>10 Days of Lending</h3>
-      <p>with the teams at PayPal, Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>PayPal &amp; Kiva</p>
     </div>
   </a>
 
   <a href="/good" class="banner" style="background-image: url(/images/projects/fb7ad8d8196c576d0761b817d1e5d4167855735e.jpg)">
     <div>
       <h3>GOOD Worldwide</h3>
-      <p>with the teams at <span style="display: inline-block">Type/Code</span> and <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p><span style="display: inline-block">Type/Code</span></p>
     </div>
   </a>
 
   <a href="/food-oasis" class="banner" style="background-image: url(/images/projects/food-oasis-map.png);">
     <div>
       <h3>Food Oasis <span style="display: inline-block">Los Angeles</span></h3>
-      <p>with the volunteers at <span style="display: inline-block">Code for America</span></p>
+      <p><span style="display: inline-block">Code for America</span></p>
     </div>
   </a>
 
-  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
+  <a href="/ctzn-app" class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg); background-position: 50% 25%;">
     <div>
       <h3>CTZN App</h3>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p><span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
@@ -99,36 +99,34 @@ class: home
   <a href="https://nyela.grandparkla.org" class="banner" style="background-image: url(/images/projects/nyela.png)">
     <div>
       <h3>New Year’s Eve at Grand Park</h3>
-      <p>with the team at the Music Center</p>
+      <p>with the Music Center</p>
     </div>
   </a>
   -->
 
-  <a href="/good-community" class="banner" style="background-image: url(/images/good-community/Screen%20Shot%202017-08-26%20at%206.10.21%20PM.png); background-size: calc(100% + 200px) auto; background-position: -75px -150px">
+  <a href="/good-community" class="banner" style="background-image: url(/images/projects/good-community.png); background-size: cover; background-position: -30px 50%;">
     <div>
       <h3>GOOD Community</h3>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
   <a href="/ok-the-store" class="banner" style="background-image: url(/images/projects/ok-the-store-pencils.jpg)">
     <div>
       <h3>OK the Store</h3>
-      <p>with the team at <span style="display: inline-block">Barrel Strength Design</span></p>
+      <p><span style="display: inline-block">Barrel Strength Design</span></p>
     </div>
   </a>
 
   <a href="/jj-burns" class="banner" style="background-image: url(/images/projects/fahrenheit-jjburns.jpg); background-position: 2% 50%;">
     <div>
       <h3>JJ Burns &amp; Company</h3>
-      <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
+      <p><span style="display: inline-block">Fahrenheit Studio</span></p>
     </div>
   </a>
 
   <a href="/fahrenheit" class="banner" style="background-image: url(/images/projects/fahrenheit-zansaar.jpg)">
     <div>
       <h3>Fahrenheit Studio</h3>
-      <p>with the team at <span style="display: inline-block">Fahrenheit Studio</span></p>
     </div>
   </a>
 
