--- a/good-fest.html
+++ b/good-fest.html
@@ -10,7 +10,7 @@ title: GOOD Fest
     <h2>Ahoy there! <span>I’m Jim</span>.</h2>
   </a>
 
-  <div class="banner" style="background-image: url(/images/projects/goodfest-responsive.jpg); background-position: 25% 50%;">
+  <div class="banner" style="background-image: url(/images/projects/goodfest-shows.png); background-position: bottom;">
     <div>
       <h1>GOOD Fest</h1>
       <p>with the team at <a href="http://www.goodinc.com">GOOD Worldwide</a>, sponsored by Google</p>
