Tweak link styles.

--- a/good-fest.html
+++ b/good-fest.html
@@ -173,7 +173,7 @@ title: GOOD Fest
       <h2>Next project →</h2>
     </div>
     <div>
-      <h1>4th of July at <span style="display: inline-block">Grand Park</span></h1>
+      <h1>4th of July <span style="display: inline-block">at Grand Park</span></h1>
       <p>with the team at <span style="display: inline-block">The Music Center</span></p>
     </div>
   </a>
