--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ class: home
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
     -->
-    <h1>Ahoy there! I’m Jim, a <!-- web design engineer -->user interface developer, based in <span style="display: inline-block">Los Angeles.</span></h1>
+    <h1>Ahoy there! I’m Jim, a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer, based in <span style="display: inline-block">Los Angeles.</span></h1>
 
     <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
