Attempt to make project titles easier to read.

--- a/good-fest.html
+++ b/good-fest.html
@@ -85,6 +85,7 @@ title: GOOD Fest
       <h3>Video</h3>
       <ul>
         <li><a href="http://www.goodinc.com/community/team/gabriel_reilich">Gabriel Reilich</a></li>
+        <li><a href="http://www.edwardchoi.com/#/goodfest/">Eddy Choi</a></li>
       </ul>
     </div>
     -->
