Tweak home page.

--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -53,11 +53,11 @@ title: Fahrenheit Studio
       <p><a href="http://www.fahrenheit.com/who/dylan-tran/">Dylan Tran</a></p>
     </div>
     <div>
-      <h3>Content Strategy</h3>
+      <h3>Content</h3>
       <p><a href="https://www.linkedin.com/in/melinda-smith-12011728">Melinda Smith</a></p>
     </div>
     <div>
-      <h3>Marketing Strategy</h3>
+      <h3>Marketing</h3>
       <p><a href="http://www.fahrenheit.com/who/robert-weitz/">Robert Weitz</a></p>
     </div>
 
