Make buttons more noticeable

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ class: home
 
   <div class="container">
 
-    <a href="#projects" class="ahoy">
+    <a class="ahoy">
       <svg width="100" height="76" viewBox="0 0 100 75.985">
         <switch>
           <use xlink:href="/images/ship.svg#ship"></use>
