Tweak font sizes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ class: home
 
     <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, universal design, <a href="https://agile.18f.gov">rapid development</a>, pattern libraries, and more. Here are some example projects…</p>
+    <p>If you’re making a web site or application, I can assist with <span style="display: inline-block"><a href="#services">prototypes</a>,</span> universal design, <a href="https://agile.18f.gov">rapid development</a>, pattern libraries, and more. Here are some example projects…</p>
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
