--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ class: home
 
   <div class="container">
 
-    <a class="ahoy">
+    <a href="#projects" class="ahoy">
       <svg width="100" height="76" viewBox="0 0 100 75.985">
         <switch>
           <use xlink:href="/images/ship.svg#ship"></use>
@@ -52,7 +52,7 @@ class: home
       <h2>Example projects</h2>
     -->
 
-    <p class="action hello"><a href="#hello">Say hello</a></p>
+    <p class="hello"><a href="#hello"><span>Say hello</span></a></p>
 
   </div>
 
