--- a/index.html
+++ b/index.html
@@ -7,23 +7,79 @@ class: home
 
   <div class="container">
 
-    <a href="#projects" class="ahoy">
+    <div class="clouds">
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+
+      <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
+        <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
+      </svg>
+    </div>
+
+    <a class="ahoy">
       <svg width="100" height="76" viewBox="0 0 100 75.985">
-        <switch>
-          <use xlink:href="/images/ship.svg#ship"></use>
-          <foreignObject>Projects</foreignObject>
-        </switch>
+        <use xlink:href="/images/ship.svg#ship"></use>
       </svg>
     </a>
 
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
     -->
-    <h1>Ahoy there! I’m Jim, <span style="display: inline-block">a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></h1>
+    <h1>Ahoy there! I’m Jim, <span>a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span>based in <span>Los Angeles.</span></h1>
 
     <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
-    <p>If you’re making a web site or application, I can assist with <span style="display: inline-block"><a href="#services">prototypes</a>,</span> universal design, <a href="https://agile.18f.gov">rapid development</a>, pattern libraries, and more. Here are some example projects…</p>
+    <p>If you’re making a web site or application, I can assist with <span style="display: inline-block"><a href="#services">prototypes</a>,</span> universal design, <a href="https://agile.18f.gov">rapid development</a>, pattern libraries, and more.</p>
+
+    <p class="action" style="margin-top: 2.4em;"><a href="#hello"><span>Say hello</span></a></p>
+
+    <h2>Here are some example projects…</h2>
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
@@ -51,8 +107,6 @@ class: home
 
       <h2>Example projects</h2>
     -->
-
-    <p class="hello"><a href="#hello"><span>Say hello</span></a></p>
 
   </div>
 
