--- a/index.html
+++ b/index.html
@@ -62,24 +62,41 @@ class: home
       </svg>
     </div>
 
-    <a class="ahoy">
+    <a href="#hello" class="ahoy">
       <svg width="100" height="76" viewBox="0 0 100 75.985">
-        <use xlink:href="/images/ship.svg#ship"></use>
+        <switch>
+          <use xlink:href="/images/ship.svg#ship"></use>
+          <foreignObject>Say Hello</foreignObject>
+        </switch>
       </svg>
     </a>
 
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
+
+    <p class="action" style="float: right; margin-left: 1.4em; margin-top: 0.7em;"><a href="#hello">Say hello</a></p>
     -->
-    <h1>Ahoy there! I’m Jim, <span>a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span>based in <span>Los Angeles.</span></h1>
+
+    <h1>Ahoy there! I’m Jim, <span>a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
     <h2>I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
-    <p>If you’re making a web site or application, I can assist with <span style="display: inline-block"><a href="#services">prototypes</a>,</span> universal design, <a href="https://agile.18f.gov">rapid development</a>, pattern libraries, and more.</p>
+    <p class="action" style="float: right; margin: 0.7em 0 0 0.7em;"><a href="#hello">Say hello</a></p>
 
-    <p class="action" style="margin-top: 2.4em;"><a href="#hello"><span>Say hello</span></a></p>
+    <p style="margin-right: 33.333%;">If you’re making a web site or application, I can assist with <span>prototypes,</span> <a href="#services">universal design</a>, rapid development, pattern libraries, and more. Here are some <span style="display: inline-block">example projects…</span></p>
+
+    {% comment %}
 
     <h2>Here are some example projects…</h2>
+    <ul class="action" style="margin-top: 2.8em;">
+      <!--
+      <li><a href="#services">Prototypes</a></li>
+      <li><a href="#services">Universal Design</a></li>
+      <li><a href="#services">Pattern Libraries</a></li>
+      -->
+      <li><a href="#hello">Say hello</a></li>
+    </ul>
+    {% endcomment %}
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
@@ -217,6 +234,7 @@ class: home
       <!--
       <li>
         <h2>Iterative development</h2>
+        https://agile.18f.gov
         <p>https://playbook.cio.gov/#play4</p>
       </li>
       -->
