Update case studies.

--- a/jj-burns.html
+++ b/jj-burns.html
@@ -18,7 +18,7 @@ title: JJ Burns
   </div>
 
   <div class="container">
-    <p>JJ Burns provides financial services to a broad range of clients, from endowments to professional athletes. Their aging desktop-oriented web site needed a redesign.</p>
+    <p>JJ Burns provides financial services to a broad range of clients, from endowments to professional athletes. Their aging, desktop-oriented web site needed a redesign.</p>
 
     <p>I worked alongside Dylan, our designer, to create responsive prototypes that expressed a new content structure and visual look for the web site. Along the way, I created a <a href="http://jjburns.com/assets/html/patterns/">pattern library</a>, and I found out that <a href="#robert">Robert</a> is an excellent cook.</p>
 
