--- a/kiva.html
+++ b/kiva.html
@@ -25,7 +25,7 @@ title: 10 Days of Lending
 
     <p>I also worked closely with Rachel from Kiva to jump through some JavaScript and CSS hoops while getting the production code into Kiva’s content management system.</p>
 
-    <p>My role also involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
+    <p>Additionally, my role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
 
     <p>You can <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> at GOOD’s web site.</p>
 
