--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -23,7 +23,7 @@ title: Fahrenheit Studio
 
     <p>During the project, I worked alongside Dylan, our designer, to create a <a href="http://www.fahrenheit.com/work/">responsive portfolio</a> that emphasized Fahrenheit’s stunning project images and would look great on retina displays and big screens. I also found out that <a href="#robert">Robert</a> is an excellent guitar player.</p>
 
-    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, creating templates with PHP, and setting up hosting with Beanstalk and Media Temple.</p>
+    <p>My role involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, creating templates with PHP, and setting up hosting with Beanstalk and Media Temple.</p>
 
     <h2>Visit the project</h2>
     <ul class="action">
@@ -101,6 +101,6 @@ title: Fahrenheit Studio
     </div>
     <div>
       <h1>GOOD Fest</h1>
-      <p>with the team at <span style="display: inline-block">GOOD Worldwide</span>, sponsored by Google</p>
+      <p>with the team at <span style="display: inline-block">GOOD Worldwide,</span> <span style="display: inline-block">sponsored by Google</span></p>
     </div>
   </a>
