Make stars twinkle now and then.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ class: home
       <svg class="cloud" width="0" height="0" viewBox="0 0 376.5 263.2">
         <path d="M254.4,41.9c0,0,118-20.7,122,88.3c3.4,92-95.7,91-95.7,91s-20.3,42-77,42c-60.7,0-84-45-84-45s-86.3,17.7-112-46.3c-31.1-77.4,41.7-95.3,41.7-95.3s9.3-30.3,31.3-44.3s57-2.7,57-2.7s21-32.3,60-29.3S254.4,41.9,254.4,41.9z"/>
       </svg>
+
+      <div class="stars"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+
     </div>
 
     <div class="sun">
