Make moon look nicer.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ class: home
 
     <p class="action" style="float: right; margin: 0.7em 0 0 0.7em;"><a href="#hello">Say hello</a></p>
 
-    <p>If you’re making a web site or application, I can assist with <span>prototypes,</span> <a href="#services">universal design</a>, pattern libraries, and more.</p>
+    <p>If you’re making a web site or application, I can assist with <span>prototypes,</span> <a href="#services">universal design</a>, pattern libraries, and more!</p>
     <p>Here are some example projects…</p>
 
     {% comment %}
