--- a/grand-park.html
+++ b/grand-park.html
@@ -23,7 +23,7 @@ title: 4th of July at Grand Park
 
     <p>To address this, we put the Grand Park web site behind <a href="https://www.cloudflare.com">Cloudflare’s</a> content delivery network which cached the entire site as static files that can be served quickly.</p>
 
-    <p>We also created a microsite for the event in <a href="https://jekyllrb.com">static HTML</a>, hosted on <a href="https://pages.github.com">GitHub Pages</a>, with a fresh, responsive design to show off their beautiful poster illustrations–and used an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache">application cache</a> to keep the web site available if a user’s device is offline.</p>
+    <p>We also created a microsite for the event in <a href="https://jekyllrb.com">static HTML</a>, hosted on <a href="https://pages.github.com">GitHub Pages</a>, with a fresh, responsive design to show off their beautiful poster illustrations—and used an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache">application cache</a> to keep the web site available if a user’s device is offline.</p>
 
     <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, editing content for usability, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, creating an appcache manifest for offline browsing, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
 
