Get ship image working in more browsers.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -3,12 +3,7 @@ layout: default
 title: CTZN App
 ---
 
-  <a href="/" class="ahoy">
-    <svg width="100" height="76" viewBox="0 0 100 75.985">
-      <use xlink:href="/images/ship.svg#ship"></use>
-    </svg>
-    <h2>Ahoy there! <span>I’m Jim</span>.</h2>
-  </a>
+{% include ahoy.html %}
 
   <div class="banner" style="background-image: url(/images/projects/55ce0d52c180524eb3d2c6e8e0fabf630700.jpg=s2048x2048.jpeg)">
     <div>
