--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ class: home
     </div>
 
     <a class="ahoy">
-      <svg width="100" height="76" viewBox="0 0 100 75.985">
-        <use xlink:href="/images/ship.svg#ship"></use>
-      </svg>
+      {% include ship.svg %}
     </a>
 
     <!--
