--- a/jj-burns.html
+++ b/jj-burns.html
@@ -3,12 +3,7 @@ layout: default
 title: JJ Burns
 ---
 
-  <a href="/" class="ahoy">
-    <svg width="100" height="76" viewBox="0 0 100 75.985">
-      <use xlink:href="/images/ship.svg#ship"></use>
-    </svg>
-    <h2>Ahoy there! <span>I’m Jim</span>.</h2>
-  </a>
+{% include ahoy.html %}
 
   <div class="banner" style="background-image: url(/images/projects/jj-burns.jpg); background-position: left;">
     <div>
