--- a/good-fest.html
+++ b/good-fest.html
@@ -3,12 +3,7 @@ layout: default
 title: GOOD Fest
 ---
 
-  <a href="/" class="ahoy">
-    <svg width="100" height="76" viewBox="0 0 100 75.985">
-      <use xlink:href="/images/ship.svg#ship"></use>
-    </svg>
-    <h2>Ahoy there! <span>I’m Jim</span>.</h2>
-  </a>
+{% include ahoy.html %}
 
   <div class="banner" style="background-image: url(/images/projects/eab30c1d4cf4ea2d85fbed9b3da40cb6ccc06667.jpg=s2048x2048.jpeg); background-position: top;">
     <div>
