--- a/grand-park.html
+++ b/grand-park.html
@@ -3,12 +3,7 @@ layout: default
 title: 4th of July at Grand Park
 ---
 
-  <a href="/" class="ahoy">
-    <svg width="100" height="76" viewBox="0 0 100 75.985">
-      <use xlink:href="/images/ship.svg#ship"></use>
-    </svg>
-    <h2>Ahoy there! <span>I’m Jim</span>.</h2>
-  </a>
+{% include ahoy.html %}
 
   <div class="banner" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
     <div>
