--- a/food-oasis.html
+++ b/food-oasis.html
@@ -7,7 +7,7 @@ title: Food Oasis Los Angeles
 
   <div class="banner" style="background-image: url(/images/projects/food-oasis-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>Food Oasis Los Angeles</h1>
+      <h1>Food Oasis <span style="display: inline-block;">Los Angeles</span></h1>
       <p>with the volunteers at <a href="http://hackforla.nationbuilder.com/about" style="display: inline-block;">Code for America</a></p>
     </div>
   </div>
