--- a/good.html
+++ b/good.html
@@ -115,7 +115,7 @@ title: GOOD Worldwide
       <h2>Next project →</h2>
     </div>
     <div>
-      <h1>Food Oasis Los Angeles</h1>
+      <h1>Food Oasis <span style="display: inline-block;">Los Angeles</span></h1>
       <p>with the volunteers at <span style="display: inline-block">Code for America</span></p>
     </div>
   </a>
