--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@ class: home
     </div>
 
     <a class="ahoy">
-      {% include ship.svg %}
+      <span class="movable-ship">
+        {% include ship.svg %}
+      </span>
     </a>
 
     <!--
@@ -78,6 +80,55 @@ class: home
 
     <p class="action" style="float: right; margin-left: 1.4em; margin-top: 0.7em;"><a href="#hello">Say hello</a></p>
     -->
+
+    <!--
+    <p>alpha: <span id="alpha"></span></p>
+    <p>beta: <span id="beta"></span></p>
+    <p>gamma: <span id="gamma"></span></p>
+    -->
+    <script>
+
+      function _onOrientationChange(e) {
+        var alpha = e.alpha;
+        var beta  = e.beta;
+        var gamma = e.gamma;
+
+        /*
+        document.getElementById("alpha").innerHTML = Math.round(alpha);
+        document.getElementById("beta").innerHTML  = Math.round(beta);
+        document.getElementById("gamma").innerHTML = Math.round(gamma);
+        */
+
+        if (gamma > 5) {
+          document.documentElement.style.setProperty('--device-gamma', 1);
+        } else if (gamma < -5) {
+          document.documentElement.style.setProperty('--device-gamma', -1);
+        } else {
+          document.documentElement.style.setProperty('--device-gamma', 0);
+        }
+
+        if (beta > 5) {
+          document.documentElement.style.setProperty('--device-beta', -1);
+        } else if (beta < -5) {
+          document.documentElement.style.setProperty('--device-beta', 1);
+        } else {
+          document.documentElement.style.setProperty('--device-beta', 0);
+        }
+
+        throttle = undefined;
+      };
+
+      var throttle = undefined;
+      function onOrientationChange(e) {
+        if (throttle !== undefined) return;
+        throttle = setTimeout(function() {
+          _onOrientationChange(e);
+        }, 1000);
+      }
+
+      window.addEventListener("deviceorientation", onOrientationChange, false);
+
+    </script>
 
     <h1>Ahoy there! I’m Jim, <span>a <!--<del style="opacity: 0.5">treasure-hunting buccaneer</del>--> <!-- web design engineer --> <!--<del>pirate</del>--> user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
@@ -89,7 +140,6 @@ class: home
     <p>Here are some example projects…</p>
 
     {% comment %}
-
     <h2>Here are some example projects…</h2>
     <ul class="action" style="margin-top: 2.8em;">
       <!--
