Turn off ship animation for now.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ class: home
         }, 100);
       }
 
-      window.addEventListener("deviceorientation", onOrientationChange, false);
+      //window.addEventListener("deviceorientation", onOrientationChange, false);
 
     </script>
 
